--- a/CBS_dev/app.html
+++ b/CBS_dev/app.html
@@ -226,7 +226,7 @@
 									<i class="iconfont icon-wujiaoxing"></i>
 									<i class="iconfont icon-wujiaoxing"></i>
 									<i class="score">5分</i>
-									<i class="num">&nbsp;&nbsp;&nbsp;/ 56评价</i>
+									<i class="num">&nbsp;/ 56评价</i>
 								</span>
 							</div>
 						</div>
