--- a/PCHtml/index.html
+++ b/PCHtml/index.html
@@ -42,7 +42,11 @@
              <a href="index.html" class="showHome" target="_blank">首页</a><a href="investment/investment.html" target="_blank">我要投资</a>
              <a href="#" target="_blank">我要融资</a><a href="infoCenter/infoCenter.html" target="_blank">资讯中心</a>
         </div>
-        <div class="navRight">
+        <div class="longinreg">
+            <a href="loginReg/login.html" target="_blank">登录</a>
+            <a href="loginReg/reg.html" target="_blank">注册</a>
+        </div> 
+      <!--  <div class="navRight">
         	<span><i class="icon iconfont icon-xiaoxitixing"></i><b></b></span>
             <span class="touxiang"><img src="resource/images/touxiang.jpg"><p>沈亮</p>
                  <div class="touxiangxiala">
@@ -53,7 +57,7 @@
                     <a href="#">退出登录</a>
                  </div>
             </span>
-        </div>
+        </div>-->
 	 </div>
 </div>
 <!--banner-->
