--- a/PCHtml/infoCenter/infoCenter.html
+++ b/PCHtml/infoCenter/infoCenter.html
@@ -126,17 +126,51 @@
 <div class="product-wrap infoProduct">
     <!--案例1-->
     <div class="product showTab notop">
-       <ul id="info1" class="infoNr">
-        <!-- <li class="f1"> 
-            <h3 class="listInfo">新华社英文推出习近平系列旧照</h3>
-            <div class="image"><a href="#"><img src="../resource/images/xiangmu.jpg"></a></div>
+        <ul id="info1" class="infoNr"></ul>
+    </div>
+    <!--案例2-->
+    <div class="product notop">
+        <ul id="info2" class="infoNr"></ul>
+      <!--  <ul class="infoNr">
+         <li class="f1"> 
+            <a href="infoDetails.html" target="_blank"><h3 class="listInfo">22新华社英文推出习近平系列旧照</h3></a>
+            <div class="image"><a href="infoDetails.html" target="_blank"><img src="../resource/images/xiangmu.jpg"></a></div>
             <div class="text fr"> 
                     <p>来源：新三板在线<i>时间：2017-05-25</i></p>                 
                     <p>5512月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示…12月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示……</p>
             </div>
-        </li>-->
-      </ul>
-            <ul id="page1" class="pagination" style=" float: right; margin-right: 15px;">
+        </li>       
+      </ul> -->
+    </div>
+    <!--案例3-->
+    <div class="product notop">
+       <ul id="info3" class="infoNr"></ul>
+      <!--  <ul class="infoNr">
+         <li class="f1"> 
+            <a href="infoDetails.html" target="_blank"><h3 class="listInfo">33新华社英文推出习近平系列旧照</h3></a>
+            <div class="image"><a href="infoDetails.html" target="_blank"><img src="../resource/images/xiangmu.jpg"></a></div>
+            <div class="text fr"> 
+                    <p>来源：新三板在线<i>时间：2017-05-25</i></p>                 
+                    <p>5512月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示…12月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示……</p>
+            </div>
+        </li>       
+      </ul> -->
+    </div>
+    <!--案例4-->
+    <div class="product notop">
+       <ul id="info4" class="infoNr"></ul>
+       <!-- <ul class="infoNr">
+         <li class="f1"> 
+            <a href="infoDetails.html" target="_blank"><h3 class="listInfo">44新华社英文推出习近平系列旧照</h3></a>
+            <div class="image"><a href="infoDetails.html" target="_blank"><img src="../resource/images/xiangmu.jpg"></a></div>
+            <div class="text fr"> 
+                    <p>来源：新三板在线<i>时间：2017-05-25</i></p>                 
+                    <p>5512月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示…12月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示……</p>
+            </div>
+        </li>       
+      </ul> -->
+  </div><!-- 案例4 -->
+            <ul class="pagination" style=" float: right; margin-right: 15px;">
                 <li><a href="#">&laquo;</a></li>
                 <li><a href="#">1</a></li>
                 <li><a href="#">2</a></li>
@@ -145,82 +179,45 @@
                 <li><a href="#">5</a></li>
                 <li><a href="#">&raquo;</a></li>
             </ul>
-    </div>
-    <!--案例2-->
-    <div class="product">
-       <ul class="infoNr">
-         <li class="f1"> 
-            <h3 class="listInfo">22新华社英文推出习近平系列旧照</h3>
-            <div class="image"><a href="#"><img src="../resource/images/xiangmu.jpg"></a></div>
-            <div class="text fr"> 
-                    <p>来源：新三板在线<i>时间：2017-05-25</i></p>                 
-                    <p>5512月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示…12月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示……</p>
-            </div>
-        </li>       
-      </ul>
-    </div>
-    <!--案例3-->
-    <div class="product">
-       <ul class="infoNr">
-         <li class="f1"> 
-            <h3 class="listInfo">33新华社英文推出习近平系列旧照</h3>
-            <div class="image"><a href="#"><img src="../resource/images/xiangmu.jpg"></a></div>
-            <div class="text fr"> 
-                    <p>来源：新三板在线<i>时间：2017-05-25</i></p>                 
-                    <p>5512月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示…12月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示……</p>
-            </div>
-        </li>       
-      </ul>
-    </div>
-    <!--案例4-->
-    <div class="product">
-       <ul class="infoNr">
-         <li class="f1"> 
-            <h3 class="listInfo">44新华社英文推出习近平系列旧照</h3>
-            <div class="image"><a href="#"><img src="../resource/images/xiangmu.jpg"></a></div>
-            <div class="text fr"> 
-                    <p>来源：新三板在线<i>时间：2017-05-25</i></p>                 
-                    <p>5512月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示…12月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示……</p>
-            </div>
-        </li>       
-      </ul>
-  </div><!-- 案例4 -->
 </div><!-- product-wrap infoProduct -->   
      </div><!-- leftinfo -->
-     <!-- 右边 -->
+        <!-- 右边 -->
      <div class="rightproject fr">
        <div class="rightDetails">
           <h4><i class="iconShape"></i>热门项目</h4>
           <div class="infoHotProject">
               <a href=""><img src="../resource/images/xiangmu.jpg" width="100%"></a>
-              <a href=""><h3>惠尔明，新三板涂料第一股！</h3></a>
+              <a href=""><span>惠尔明，新三板涂料第一股！</span></a>
               <p>公司创立于2001年， 专注于工业涂料的设计开发、生产、销售及服务，产品涵盖8大涂料类别100多个品种。经过15年经营历程，积累了丰富的理论</p>
           </div>
            <div class="infoHotProject" style="border-bottom: none;">
               <a href=""><img src="../resource/images/en4bbcijm4.png" width="100%"></a>
-              <a href=""><h3>惠尔明，新三板涂料第一股！</h3></a>
+              <a href=""><span>惠尔明，新三板涂料第一股！</span></a>
               <p>公司创立于2001年， 专注于工业涂料的设计开发、生产、销售及服务，产品涵盖8大涂料类别100多个品种。经过15年经营历程，积累了丰富的理论</p>
           </div>
        </div>
-     </div>
+     </div> <!-- 右边 -->
       </div>
    </div>
  </div>  
 </body>
 <script src="../resource/js/jquery.js"></script>
+<!-- 模板引擎 -->
 <script src="../resource/js/jquery.tmpl.js"></script>
+<!-- 轮播 -->
 <script src="../resource/plugins/infoSlide/prototype.js"></script>
 <script src="../resource/plugins/infoSlide/ImageSlide.js"></script>
- <script id="myTemplate" type="text/x-jquery-tmpl"> 
-      <li class="f1"> 
-            <h3 class="listInfo">${$data.title}</h3>
-            <div class="image"><a href="${$data.id}"><img src="${$data.imgurl}"></a></div>
-            <div class="text fr"> 
-                    <p>来源：${$data.form}<i>时间：${$data.time}</i></p>                 
-                    <p>${$data.text}</p>
-            </div>
-        </li>      
-</script> 
+<!-- 把${}里边的变量  替换  成data里对应的值 -->
+<script id="myTemplate" type="text/x-jquery-tmpl"> 
+   <li class="f1"> 
+       <h3 class="listInfo"><a href="infoDetails.html?id=${$data.id}" target="_blank">${$data.title}</a></h3>
+       <div class="image"><a href="infoDetails.html?id=${$data.id}" target="_blank"><img src="${$data.imgurl}"></a></div>
+       <div class="text fr"> 
+            <p>来源：${$data.form}<i>时间：${$data.time}</i></p>                 
+            <p>${$data.text}</p>
+       </div>
+   </li>      
+</script>  
 <script>
   $(document).ready(function(){
     //资讯中心tab切换
@@ -239,27 +236,8 @@
           },function(){
             $(this).css("border-color","#e5e5e5");
             $(this).find('p > a').css('color','#666666');
+             });
           });
-
-          //翻页数据请求
-          $(".pagination li a").click(function(){
-              var index=$(this).html(),//当前页码
-              size=6;//请求条数
-              if(isNaN(index)){
-                //做其它翻页处理
-                return;
-              }
-              console.log(index);
-             $.ajax({
-               type: "POST",
-               url: "",
-               data: "pageIndex="+index+"&pageSize="+size,
-               success: function(data){
-                  $('#myTemplate').tmpl(data).appendTo('#info1');//#info替换成你想渲染的dom对象
-                }
-              });
-           })
-        });
    //轮播
    new ImageSlide({
     project:"#focusImage",
@@ -270,28 +248,29 @@
     auto:!0,
     hide:!0
    })
-
-
    //分页第一次请求
    var data=[];
    $.ajax({
      type: "POST",
      url: "",
-     data: "pageIndex=1&pageSize=6",
+     data: "pageIndex=1&pageSize=6",/*当前在第几页 和  一页有多少条数据*/
      success: function(data){
-        $('#myTemplate').tmpl(data).appendTo('#info1');//#info替换成你想渲染的dom对象
+      /*  $('#myTemplate').tmpl(data).appendTo('#info1');*///#info替换渲染的dom对象
      }
    });
-    //接口数据模拟（请对接接口后删除）
+    //接口数据模拟
    data=[
-   {id:1,title:"新华社英文推出习近平系列旧照",imgurl:"../resource/images/xiangmu.jpg",form:"新三板在线",time:"2017-05-25",text:"5512月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示…12月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示……"},
-   {id:2,title:"新华社英文推出习近平系列旧照",imgurl:"../resource/images/er6zalrm1n.jpg",form:"新三板在线",time:"2017-05-25",text:"5512月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示…12月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示……"},
-   {id:3,title:"新华社英文推出习近平系列旧照",imgurl:"../resource/images/erojvl2311.jpg",form:"新三板在线",time:"2017-05-25",text:"5512月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示…12月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示……"},
-   {id:4,title:"新华社英文推出习近平系列旧照",imgurl:"../resource/images/xiangmu.jpg",form:"新三板在线",time:"2017-05-25",text:"5512月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示…12月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示……"},
+   {id:1,title:"新华社英文推出习近平系列旧照",imgurl:"../resource/images/xiangmu.jpg",form:"新三板在线",time:"2017-05-25",text:"1112月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示…12月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示……"},
+   {id:2,title:"新华社英文推出习近平系列旧照",imgurl:"../resource/images/er6zalrm1n.jpg",form:"新三板在线",time:"2017-05-25",text:"2212月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示…12月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示……"},
+   {id:3,title:"新华社英文推出习近平系列旧照",imgurl:"../resource/images/erojvl2311.jpg",form:"新三板在线",time:"2017-05-25",text:"3312月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示…12月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示……"},
+   {id:4,title:"新华社英文推出习近平系列旧照",imgurl:"../resource/images/xiangmu.jpg",form:"新三板在线",time:"2017-05-25",text:"4412月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示…12月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示……"},
    {id:5,title:"新华社英文推出习近平系列旧照",imgurl:"../resource/images/xiangmu.jpg",form:"新三板在线",time:"2017-05-25",text:"5512月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示…12月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示……"},
-   {id:6,title:"新华社英文推出习近平系列旧照",imgurl:"../resource/images/xiangmu.jpg",form:"新三板在线",time:"2017-05-25",text:"5512月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示…12月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示……"}
+   {id:6,title:"新华社英文推出习近平系列旧照",imgurl:"../resource/images/xiangmu.jpg",form:"新三板在线",time:"2017-05-25",text:"6612月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示…12月23日，新华英文推出习近平系列新老照片，题目为《Profile photos: Xi Jinping: Man of the people, statesman of vision》。PO是新三板始终绕不开的一个话题，而就在2017年2月17日又一家极具IPO成功潜力的新三板公司“有友食品”获得了证监会IPO申请审查反馈意见通知书，根据公告显示……"}
    ];
-
+/*填充*/
    $('#myTemplate').tmpl(data).appendTo('#info1');
+   $('#myTemplate').tmpl(data).appendTo('#info2');
+   $('#myTemplate').tmpl(data).appendTo('#info3');
+   $('#myTemplate').tmpl(data).appendTo('#info4');
 </script>
 </html>
