--- a/bread/bread2.html
+++ b/bread/bread2.html
@@ -59,7 +59,7 @@ ul.breadcrumb li a {
   line-height: 50px;
   padding-left: 52px;
   padding-right: 33.33333px;
-  width: 50px;
+  width: 100px;
 }
 ul.breadcrumb li a .icon {
   display: inline-block;
@@ -86,32 +86,32 @@ ul.breadcrumb li:last-child a {
 <ul class="breadcrumb">
   <li>
     <a href="#">
-      <span class="icon icon-file"></span>
-      <span class="text">file</span>
+      <span class="icon icon-file">一</span>
+      <span class="text">未联系</span>
     </a>
   </li>
   <li>
     <a href="#">
-      <span class="icon icon-folder-open"></span>
-      <span class="text">folder</span>
+      <span class="icon icon-folder-open">二</span>
+      <span class="text">已到店</span>
     </a>
   </li>
   <li>
     <a href="#">
-      <span class="icon icon-code"></span>
-      <span class="text">CSS 3</span>
+      <span class="icon icon-code">三</span>
+      <span class="text">已报价</span>
     </a>
   </li>
   <li>
     <a href="#">
-      <span class="icon icon-beaker"></span>
-      <span class="text">Lab</span>
+      <span class="icon icon-beaker">四</span>
+      <span class="text">已成交</span>
     </a>
   </li>
   <li>
     <a href="#">
-      <span class="icon icon-home"></span>
-      <span class="text">Home13</span>
+      <span class="icon icon-home">五</span>
+      <span class="text">已战败</span>
     </a>
   </li>
 </ul>
