--- a/mobile.html
+++ b/mobile.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>仿安卓手机拨号界面按键特效</title>
+<title>仿安卓手机拨号界面按键</title>
 <script type="text/javascript" src="jquery-1.6.2.min.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
